# aerial_mapper

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
aerial_mapper/: CMakeLists.txt  README.md  package.xml
aerial_mapper/docker/: Dockerfile  Dockerfile.base
aerial_mapper_demos/: CMakeLists.txt  README.md  package.xml
aerial_mapper_demos/flags/: 0-synthetic-cadastre-dense-pcl.ff  0-synthetic-cadastre-dsm.ff  0-synthetic-cadastre-ortho-backward-batch.ff  0-synthetic-cadastre-ortho-backward-incremental-colored.ff  0-synthetic-cadastre-ortho-backward-incremental.ff  0-synthetic-cadastre-ortho-from-pcl.ff  1-real-rafz-ortho-from-homography.ff
aerial_mapper_demos/flags/dense-pcl/: dense-pcl-simulation.ff  dense-pcl.ff
aerial_mapper_demos/flags/dsm/: dsm.ff
aerial_mapper_demos/flags/ortho/: ortho-backward-grid-batch.ff
aerial_mapper_demos/launch/: 0-synthetic-cadastre-ortho-backward-batch.launch  0-synthetic-cadastre-ortho-backward-incremental-colored.launch  px4-sitl.launch
aerial_mapper_demos/rviz/: dense_pcl.rviz  ortho.rviz  ortho_colored.rviz  rviz_config.rviz
aerial_mapper_demos/scripts/: 0-synthetic-cadastre-dense-pcl.launch  0-synthetic-cadastre-dsm.launch  0-synthetic-cadastre-ortho-backward-incremental.launch  0-synthetic-cadastre-ortho-from-pcl.launch  1-real-rafz-ortho-from-homography.launch  dsm-simulation-rviz.launch  export-geo-file-cadastre.sh  ortho-grid-incremental-simulation-rviz.launch  run-backward-grid-incremental.sh  run-dense-pcl-simulation-deprecated.sh  run-dsm-simulation.sh  run-forward-homography-simulation.sh
aerial_mapper_demos/src/dense-pcl/: main-dense-pcl.cc
aerial_mapper_demos/src/dsm/: main-dsm.cc
aerial_mapper_demos/src/ortho/: main-ortho-backward-grid-incremental.cc  main-ortho-backward-grid.cc  main-ortho-forward-homography.cc  main-ortho-from-pcl.cc
aerial_mapper_demos/src/util/: main-generate-pix4d-geofile.cc  main-test-google-maps-api.cc
aerial_mapper_demos_no_ros/: CMakeLists.txt  package.xml
aerial_mapper_demos_no_ros/flags/dense-pcl/: dense-pcl-simulation-deprecated.ff  dense-pcl.ff
aerial_mapper_demos_no_ros/flags/dsm/: dsm.ff
aerial_mapper_demos_no_ros/flags/ortho/: ortho-backward-grid-batch.ff  ortho-backward-grid-incremental.ff  ortho-backward-grid.ff  ortho-forward-homography.ff  ortho-from-pcl.ff
aerial_mapper_demos_no_ros/rviz/: dsm.rviz  rviz.launch
aerial_mapper_demos_no_ros/scripts/: dense-pcl-simulation-rviz.launch  ortho-from-pcl-batch-simulation-rviz.launch  ortho-grid-batch-simulation-rviz.launch  run-backward-grid-batch-simulation.sh
aerial_mapper_demos_no_ros/src/dense-pcl/: main-dense-pcl.cc  main_from_file.cc
aerial_mapper_demos_no_ros/src/dsm/: main-dsm-from-file.cc  main-dsm.cc
aerial_mapper_demos_no_ros/src/ortho/: main-ortho-backward-grid-incremental.cc  main-ortho-backward-grid.cc  main-ortho-forward-homography.cc  main-ortho-from-pcl.cc
aerial_mapper_demos_ros/: CMakeLists.txt  README.md  package.xml
aerial_mapper_demos_ros/src/dense-pcl/: main.cc
aerial_mapper_demos_ros/src/dsm/: DEM_from_rosstream_node.cc
aerial_mapper_demos_ros/src/ortho/: main-ortho-backward-grid.cc  main-ortho-forward-homography.cc  main-ortho-from-pcl.cc  main-ros-stream-node.cc  main_from_file.cc
aerial_mapper_dense_pcl/: CMakeLists.txt  README.md  package.xml
aerial_mapper_dense_pcl/include/aerial-mapper-dense-pcl/: Utils.h  block-matching-base.h  block-matching-bm.h  block-matching-sgbm.h  common.h  dense-pcl-planar-rectification.h  densifier.h  rectifier.h  stereo.h
aerial_mapper_dense_pcl/include/fw_online_planar_rectification_node/: Utils.h  fw-online-planar-rectification.h
aerial_mapper_dense_pcl/src/: Utils.cpp  block-matching-bm.cpp  block-matching-sgbm.cpp  dense-pcl-planar-rectification.cc  densifier.cpp  fw-online-planar-rectification.cc  main.cc  main_from_file.cc  rectifier.cpp  stereo.cpp
aerial_mapper_dsm/: CMakeLists.txt  README.md  package.xml
aerial_mapper_dsm/include/aerial-mapper-dsm/: dsm.h  fw-digital-elevation-map.h
aerial_mapper_dsm/include/fw_online_digital_elevation_map_node/: fw-digital-elevation-map.h  utils-color-palette.h  utils-nearest-neighbor.h
aerial_mapper_dsm/src/: dsm.cc  fw-online-digital-elevation-map.cc
aerial_mapper_google_maps_api/: CMakeLists.txt  package.xml
aerial_mapper_google_maps_api/include/aerial-mapper-google-maps-api/: google-maps-api.h
aerial_mapper_google_maps_api/src/: google-maps-api.cc
aerial_mapper_grid_map/: CMakeLists.txt  README.md  package.xml
aerial_mapper_grid_map/include/aerial-mapper-grid-map/: aerial-mapper-grid-map.h
aerial_mapper_grid_map/src/: aerial-mapper-grid-map.cc
aerial_mapper_io/: CMakeLists.txt  README.md  package.xml
aerial_mapper_io/include/aerial-mapper-io/: aerial-mapper-io.h
aerial_mapper_io/src/: aerial-mapper-io.cc
aerial_mapper_ortho/: CMakeLists.txt  README.md  package.xml
aerial_mapper_ortho/include/aerial-mapper-ortho/: ortho-backward-grid.h  ortho-forward-homography.h  ortho-from-pcl.h  orthomosaic-backprojection.h
aerial_mapper_ortho/include/fw-ortho/: fw-online-orthomosaic.h  ros-callback-sync.h
aerial_mapper_ortho/src/: fw-online-orthomosaic.cc  main-grid-ortho.cc  main_from_file.cc  node-backprojection.cc  ortho-backward-grid.cc  ortho-forward-homography.cc  ortho-from-pcl.cc  orthomosaic-backprojection.cc
aerial_mapper_thirdparty/: CMakeLists.txt  README.md  package.xml
aerial_mapper_thirdparty/include/aerial-mapper-thirdparty/: gps-conversions.h  nanoflann.hpp
aerial_mapper_utils/: CMakeLists.txt  README.md  package.xml
aerial_mapper_utils/include/aerial-mapper-utils/: utils-color-palette.h  utils-common.h  utils-math.h  utils-nearest-neighbor.h
aerial_mapper_utils/src/: utils-common.cc
aerial_mapper_utils/test/: test-kd-tree.cc
ortho_from_pcl/: CMakeLists.txt  package.xml
ortho_from_pcl/include/fw_ortho_from_pcl/: fw-digital-elevation-map.h  fw-online-planar_rectification.h~  ros-callback-sync.h  utils-nearest-neighbor.h
ortho_from_pcl/src/: DEM_from_vi_map_node.cc  fw-digital-elevation-map.cc  fw-online-planar_rectification.cc~
(+16 files in other folders)
