<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper</name>
  <version>0.0.1</version>
  <description>aerial_mapper.</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>aerial_mapper_demos_no_ros</exec_depend>
  <exec_depend>aerial_mapper_demos_ros</exec_depend>
  <exec_depend>aerial_mapper_dense_pcl</exec_depend>
  <exec_depend>aerial_mapper_dsm</exec_depend>
  <exec_depend>aerial_mapper_grid_map</exec_depend>
  <exec_depend>aerial_mapper_io</exec_depend>
  <exec_depend>aerial_mapper_ortho</exec_depend>
  <exec_depend>aerial_mapper_ros</exec_depend>
  <exec_depend>aerial_mapper_thirdparty</exec_depend>
  <exec_depend>aerial_mapper_utils</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
