<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper_google_maps_api</name>
  <version>0.0.1</version>
  <description>aerial_mapper_google_maps_api</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aerial_mapper_thirdparty</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>opencv3_catkin</depend>


</package>
