<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper_grid_map</name>
  <version>0.0.1</version>
  <description>aerial_mapper_grid_map</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>

</package>
