<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper_io</name>
  <version>0.0.1</version>
  <description>aerial_mapper_io</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
