<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper_io</name>
  <version>0.0.1</version>
  <description>aerial_mapper_io</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

   <depend>aslam_cv_cameras</depend>
   <depend>aslam_cv_common</depend>
   <depend>aslam_cv_frames</depend>
   <depend>aslam_cv_pipeline</depend>
   <depend>eigen_catkin</depend>
   <depend>glog_catkin</depend>
   <depend>aerial_mapper_utils</depend>

</package>
