<?xml version="1.0"?>
<package format="2">
  <name>aerial_mapper_utils</name>
  <version>0.0.1</version>
  <description>aerial_mapper_utils</description>
  <maintainer email="hitimo@ethz.ch">Timo Hinzmann</maintainer>
  <author email="hitimo@ethz.ch">Timo Hinzmann</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>aerial_mapper_thirdparty</depend>
  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_pipeline</depend>
  <depend>camera_info_manager</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>minkindr_conversions</depend>
  <depend>mono_dense_reconstruction</depend>
  <depend>mono_dense_reconstruction_nodes</depend>
  <depend>maplab_common</depend>
  <depend>opencv3_catkin</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_catkin</depend>

</package>
